[package]
name = "hdb_acc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vb_accumulator = "0.28.0"
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ff = { version = "0.4.0", default-features = false }

anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1.37"
hex = "0.4"

[dev-dependencies]
tempfile = "3.6.0" 